tests/fixtures/fail/throw_in_option_return.sali
let fail(): Option(i32) = {
  throw true
}

let main(): i32 = fail() ?? 42
